# TourismQA

./: .gitignore  items.json  pyproject.toml  requirements.txt
scripts/: 1_fetch_answer_entities.sh
src/tourque/entities/: getTourqueEntities.py
tests/: README.md  __init__.py  conftest.py  test_common.py  test_getTourqueEntities.py  test_hotels_parser_fix.py  test_integration.py  test_processor1.py  test_processor_entity.py
utils/crawlers/: Attractions.py  Hotels.py  Processor.py  Restaurants.py
